Fix: Missing padding in section-header.

--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -94,6 +94,7 @@ a:active {
 
 .section-header {
     text-align: var(--section-header-align);
+    padding: var(--section-header-padding);
 }
 
 .section-body {
